Fixed width issues and collapsable component.

--- a/style.css
+++ b/style.css
@@ -2,57 +2,23 @@
 
 * {
     box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
     color: white;
 }
 
 body {
     font-family: Roboto, sans-serif;
 }
-/* 
-.back {
-    width: 100vw;
-    height: 100vh;
-    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url ("./ASSETS/background_image.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: white;
-    height: 98vh;
-    width: 99vw;
-    margin-top: -8px;
-    margin-left: -8px;
-   
-} */
-
-/* .curve-in {
-    height: 10vh;
-    width: 100vw;
-    background: linear-gradient(to right,black,rgb(255, 0, 204),red,rgb(255, 0, 204), black);
-    position: relative;
-    top: 90%;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-} */
-
-/* .curve-out {
-    height: 90%;
-    width: 100%;
-    background: radial-gradient(ellipse at 50% 0, blue, black 50%);
-    position: absolute;
-    top: 10%;
-    border-top-left-radius: 45%;
-    border-top-right-radius: 45%;
-} */
 
 /* styling the curve */
 
 .hero {
     position: relative;
-    width: 1344px;
-    height: 50px;
+    width: 99.5vw;
+    height: 8vh;
+    padding-top: px;
     overflow: hidden;
-    position: relative;
-    margin-left: -8px;
     background: #000;
 }
 
@@ -60,10 +26,9 @@ body {
 
 .netflix-curve {
     position: absolute;
-    width: 130%;
-    height: 200px;
-    top: 10px;
-    margin-left: 1px;
+    width: 99.5vw;
+    height: 100vh;
+    top: 1px;
     border-top: 4px solid #e50914;
     border-radius: 90%;
     box-shadow: 0px -10px 20px rgba(229, 9, 20, 0.4);
@@ -77,12 +42,17 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     color: white;
-    height: 98vh;
-    width: 99vw;
+    height: 600px;
+    width: 99.5vw;
     margin-top: -8px;
     margin-left: -8px;
     
 } 
+
+.main-container {
+    background-color: black;
+    opacity: 99%;
+}
 
 
 
@@ -142,21 +112,23 @@ body {
     justify-content: center;
     align-items: center;
     padding-top: 5px;
-    gap: 2px;
+   
 
 }
 
 .signing-up-form input {
-    background: none;
+    background: none; 
     padding: 10px;
     width: 370px;
     height: 58px;
     font-size: 20px;
     border: none;
+   
 }
 
 form {
     border: 1px solid white;
+    background: none;
     border-radius: 8px;
 }
 
@@ -176,12 +148,21 @@ form {
 
 .trending-cards {
     background-color: black;
+    display: flex;
+    overflow-x: hidden;
+    /* align-items: flex-end; */
     margin-top: -22px;
-    margin-left: -10px;
-    margin-right: -9px;
-    height: 1000px;
+    /* margin-left: -10px;
+    margin-right: -9px; */
+    width: 99.5vw;
+
 }
 
+.trend{
+    height: 10vh;
+    width: 99.5vw;
+    background: black;
+}
 .card-wrapper {
     margin: 5px;
     display: inline-block;
@@ -282,20 +263,33 @@ form {
 
 .trailer-video {
     background-color: black;
-    width: ;
-    height: px;
+    width: 99.5vw;
+    /* margin-left: -9.5px; */
 }
+
+.trailer video {
+    background-color: black;
+    height: 500px;
+    width: 98.5vw;
+    padding-left: 50px;
+    margin-right: 1.5px;
+
+    
+}
+
 
 
 /* styling the benefits section */
 
+.joining-motivation {
+    width: 99.5vw;
+}
+
 .benefits {
     display: flex;
     height: 400px;
-    width: px;
+    width: 99.5vw;
     background-color: black;
-    margin-left: -8px;
-    margin-right: -8px;
     margin-bottom: -22px;
     margin-top: -65px;
 }
@@ -318,11 +312,11 @@ form {
 
 .FAQ-Section {
     background-color: black;
-    margin-left: -8px;
-    margin-right: -8px;
+    padding-left: px;
     margin-top: -19px;
     margin-bottom: -19px;
     padding-left: 80px;
+    width: 99.5vw;
 }
 
 .FAQ-Section h3 {
@@ -334,15 +328,14 @@ form {
 
 .questions-list {
     list-style-type: none;
-    height: 800px;
+    
 }
 
-.questions-list button {
+.FAQ-Section .faq-item {
     width: 1000px;
-    height: 85px;
+    justify-content: space-between;;
     background-color: grey;
     text-align: left;
-    padding-left: 20px;
     font-size: 20px;
 }
 
@@ -351,7 +344,8 @@ form {
 .faq-item {
     list-style: none;
     margin-bottom: 8px;
-    width: 100%;
+    margin-left: 40px;
+    
 }
 
 .faq-toggle {
@@ -375,7 +369,7 @@ form {
 }
 
 .faq-content {
-    max-height: 0;
+    max-height: 0px;
     overflow: hidden;
     background: #2d2d2d;
     transition: max-height 0.2s cubic-bezier(0.5, 0, 0.1, 1);
@@ -383,13 +377,12 @@ form {
 }
 
 .faq-content {
-    padding: 20px 30px;
     color: white;
     font-size: 1.2rem;
 }
 
 .faq-toggle:checked ~ .faq-content {
-    max-height: 600px;
+    max-height: 1000px;
 }
 
 .faq-toggle:checked ~ .faq-label .icon{
@@ -406,7 +399,7 @@ form {
 .joining {
     background-color: black;
     align-items: center;
-    padding-bottom: 110px;
+    padding-bottom: 150px;
     
 }
 
@@ -424,6 +417,9 @@ form {
     padding-bottom: ; 
 } */
 
+footer {
+    height: 100vh;
+}
 .signing-up-form form {
     width: 500px;
     height: 20px;
@@ -448,8 +444,9 @@ form {
 
 footer {
     background-color: black;
-    margin-left: -8px;
-    margin-right: -8px;
+    width: 99.5vw;
+    margin-left: px;
+    margin-right: px;
     margin-bottom: -16px;
 }
 
@@ -463,12 +460,26 @@ footer {
 }
 #footer-list {
     list-style-type: none;
+    margin-left: 40px;
     columns: 4;
 }
 
 .language-selection {
     margin-left: 40px;
+    height: 53px;
+    width: 142px;
+    padding-bottom: 5px;
+    border-radius: 15%;
 }
+
+#language {
+    background-color: #222222;
+    color: white;
+    height: 30px;
+    width: 142px; 
+}
+
+
 
 .netflix-south {
     padding-top: 20px;
